@@ -32,30 +32,57 @@ if ($show_details) {
 }             
 print "<p>";          
 
-list($oks, $errors, $warnings)=checkVersions($show_details);
-if  ($errors) {
-	print "<p>";
-	print '<span class="errorlong">';
-       	print sprintf(_("The following files are missing or not the correct version for this version of %s.  Please replace them with the correct version."), Gallery());
-	print '</span>';
-       	print "<br><br>\n";
-       	foreach ($errors as $file => $error) {
-	       	print "<div class=\"emphasis\">$file:</div> &nbsp;&nbsp;&nbsp;&nbsp;$error<br>\n";
+list($oks, $errors, $warnings)=checkVersions(false);
+if  ($errors) { ?>
+	<p>
+	<span class="errorlong">
+       	<?php print sprintf(_("%s older than expected."), 
+			pluralize_n(count($errors), _("1 file"), 
+				_("files"), _("No files"))); ?>
+	</span>
+	<?php if ($show_details) { ?>
+		<p>
+	       	<?php print sprintf(_("The following files are missing or not the correct version for this version of %s.  Please replace them with the correct version."), Gallery()); ?>
+	       	<br>
+		<?php
+	       	foreach ($errors as $file => $error) {
+		       	print "<div class=\"emphasis\">$file:</div> &nbsp;&nbsp;&nbsp;&nbsp;$error<br>\n";
+	       	}
        	}
 }
-if  ($warnings) {
-	print "<p>";
-	print '<span class="warninglong">';
-       	print sprintf(_("The following files are more up-to-date than expected for this version of %s.  If you are using pre-release code, this is OK."), Gallery());
-	print '</span>';
-       	print "<br><br>\n";
-       	foreach ($warnings as $file => $warning) {
-	       	print "<div class=\"emphasis\">$file:</div> &nbsp;&nbsp;&nbsp;&nbsp;$warning<br>\n";
-       	}
-} ?>
-<br><br><span class="successlong">
-<?php print sprintf(_("%d files up-to-date."), count($oks)); ?>
-<br>
+if  ($warnings) { ?>
+	<p>
+	<span class="warninglong">
+       	<?php print sprintf(_("%s files more recent than expected."), 
+			pluralize_n(count($warnings), _("1 file"), 
+				_("files"), _("No files"))); ?>
+	       	</span>
+	       	<?php if ($show_details) {?>
+		       	<br><br>
+			<?php 
+			print sprintf(_("The following files are more up-to-date than expected for this version of %s.  If you are using pre-release code, this is OK."), Gallery());
+			foreach ($warnings as $file => $warning) {
+			       	print "<div class=\"emphasis\">$file:</div> &nbsp;&nbsp;&nbsp;&nbsp;$warning<br>\n";
+		       	}
+	       	}
+}
+?>
+
+<p>
+
+<span class="successlong">
+<?php print sprintf(_("%s up-to-date."), 
+		pluralize_n(count($oks), _("1 file"), 
+			_("files"), _("No files"))); ?>
 </span>
+<?php if ($show_details && $oks) { ?>
+	       	<br><br>
+	       	<?php 
+		print _("The following files are up-to-date.");
+	       	foreach ($oks as $file => $ok) {
+	       		print "<div class=\"emphasis\">$file:</div> &nbsp;&nbsp;&nbsp;&nbsp;$ok<br>\n";
+	       	}
+}
+?>
 </body>
 </html>
